<resources>
    <string name="app_name">Scan Create Professor</string>
    <string name="standard_icon_btn_desc">goFolder</string>
    <string name="filled_icon_btn_desc">goToCamera</string>
    <string name="preference_layout_appbar_title">Preference</string>
    <string name="sample_title_folder_note_card_row_item">Title</string>
    <string name="sample_content_folder_note_card_row_item">supporting_text</string>
    <string name="add_new_note_description_float_button_activity_folder">Add New Note</string>
    <string name="add_new_note_text_float_button_activity_folder">Add</string>
    <string name="scan_text_float_button_activity_note">Scan</string>
    <string name="scan_description_float_button_activity_note">TODO</string>
    <string name="recognize_description_float_button_activity_note">TODO</string>
    <string name="label_text_field_add_new_note_dialog">Title</string>
    <string name="sample_title_text_field_add_new_note_dialog" translatable="false">New_Note</string>
    <string name="title_app_bar_folder_app_bar">Scan Create Professor</string>
    <string name="button_title_preference_menu_app_bar_activity_folder">goToPreference</string>
    <string name="ink_language_tag_summary_list_preference">Choose the language for the Ink Recognizer</string>
    <string name="ink_language_tag_title_list_preference">Ink Recognition Language</string>
    <string name="dark_mode_summary_switch_preference">Set Dark mode</string>
    <string name="dark_mode_title_switch_preference">Dark Theme</string>
    <string name="theme_title_preference_category">Theme</string>
    <string name="recognize_title_preference_category">Recognize</string>
    <string name="scanner_language_tag_title_list_preference">Scanner Language</string>
    <string name="scanner_language_tag_summary_list_preference">Choose the language for the scanner</string>
    <string name="button_take_photo_camera_x_activity">takePhoto</string>
    <string name="scan_popup_window_title">Camera Or Album</string>
    <string name="scan_popup_window_item_camera">Camera</string>
    <string name="scan_popup_window_item_Album">Album</string>
    <string name="scan_popup_window_cancel">Cancel</string>
    <string name="activity_note_status">Ready</string>
    <string name="add_new_note_dialog_helper_text">Enter The Title</string>
    <string name="add_note_dialog_title">Title</string>
    <string name="add_note_dialog_positive_button">OK</string>
    <string name="add_note_dialog_negative_button">Cancel</string>
    <string name="start_dialog_title">One Step to Start</string>
    <string name="start_dialog_positive_button">OK</string>
    <string name="start_dialog_message">Select a folder to save your note</string>
    <string name="input_cannot_be_empty_add_note_dialog">Input cannot be empty</string>
    <string name="input_contains_special_characters_add_note_dialog">Input contains special characters</string>
    <string name="delete_note_long_click_folder_note_card">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note_folder_note_card">Are you sure you want to delete this note?</string>
    <string name="yes_folder_note_card">Yes</string>
    <string name="no_folder_note_card">No</string>


</resources>
