<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/theme_title_preference_category">

        <SwitchPreferenceCompat
            android:key="set_dark_mode"
            android:summary="@string/dark_mode_summary_switch_preference"
            android:title="@string/dark_mode_title_switch_preference" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/recognize_title_preference_category">

        <ListPreference
            android:defaultValue="en-US"

            android:key="ink_language_tag"
            android:title="@string/ink_language_tag_title_list_preference"
            android:summary="@string/ink_language_tag_summary_list_preference"
            />

        <ListPreference
            android:defaultValue="Latin"

            android:key="scanner_language_tag"
            android:title="@string/scanner_language_tag_title_list_preference"
            android:summary="@string/scanner_language_tag_summary_list_preference"
            />

    </PreferenceCategory>

</PreferenceScreen>