<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_field_layout_add_new_note_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:helperTextEnabled="true"
        app:helperText="@string/add_new_note_dialog_helper_text"
        app:suffixText=".txt"

        android:hint="@string/label_text_field_add_new_note_dialog"
        app:hintTextAppearance="?attr/textAppearanceBodySmall"

        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_text_field_add_new_note_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_title_text_field_add_new_note_dialog"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>