<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout_activity_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_activity_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/title_app_bar_folder_app_bar"
            android:icon="@drawable/setting_baseline_settings_24"
            app:menu="@menu/folder_app_bar"
            app:titleCentered="true"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_activity_folder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
       />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_extended_fab_activity_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"

        android:contentDescription="@string/add_new_note_description_float_button_activity_folder"

        android:text="@string/add_new_note_text_float_button_activity_folder"
        app:icon="@drawable/add_baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>